--- a/package.json
+++ b/package.json
@@ -14,9 +14,13 @@
     "bootstrap": "^4.0.0",
     "chartist": "^0.11.0",
     "es6-promise": "^4.2.4",
+    "express": "^4.17.1",
+    "mysql": "^2.18.1",
     "vue": "^2.6.10",
+    "vue-baidu-map": "^0.21.22",
     "vue-clickaway": "^2.1.0",
     "vue-notifyjs": "^0.3.0",
+    "vue-resource": "^1.5.1",
     "vue-router": "^3.0.1"
   },
   "devDependencies": {
